[gd_scene load_steps=6 format=3 uid="uid://dfm4dkpmpcn03"]

[ext_resource type="Script" uid="uid://ssghykoo38nq" path="res://ui/DeathScreen.gd" id="1_7omqd"]
[ext_resource type="FontFile" uid="uid://ds7ysefxxhhka" path="res://assets/fonts/game_over.ttf" id="2_v3ud7"]
[ext_resource type="FontFile" uid="uid://xrutd1lqt4v2" path="res://assets/fonts/Alkhemikal.ttf" id="2_ygmgs"]
[ext_resource type="StyleBox" uid="uid://c3e0fwcf6rw2e" path="res://ui/Button.stylebox" id="4_c1sf4"]
[ext_resource type="StyleBox" uid="uid://c8tt2fy2cidc5" path="res://ui/hover.tres" id="5_e7iop"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7omqd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ygmgs")
theme_override_font_sizes/font_size = 150
text = "You have fallen!"
horizontal_alignment = 1

[node name="RespawnButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v3ud7")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("4_c1sf4")
theme_override_styles/pressed = ExtResource("5_e7iop")
theme_override_styles/hover = ExtResource("5_e7iop")
theme_override_styles/disabled = ExtResource("5_e7iop")
theme_override_styles/focus = ExtResource("5_e7iop")
text = "RESPAWN  AT  LAST  CHECKPOINT"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v3ud7")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("4_c1sf4")
theme_override_styles/pressed = ExtResource("5_e7iop")
theme_override_styles/hover = ExtResource("5_e7iop")
theme_override_styles/disabled = ExtResource("5_e7iop")
theme_override_styles/focus = ExtResource("5_e7iop")
text = "QUIT  TO  MAIN  MENU"
